  instead of showing only the System Load graph. [#216]
- Added the ability to show all graphs of all remote servers in Multihost mode,
  instead of showing only the System Load graphs. [#216]
- Added in 'ipmi.pm' the ability to save negative values. [#218]
- Added the ability in the alerts of 'gensens.pm' to specify when the alert will
  be triggered 'above' or 'below' the threshold. [#221]
- Drop entropy support for FreeBSD in 'system.pm'. [#226]
- Added Exim support in 'mail.pm'. [#96]
- Added an autocheck to control the responsiveness of the HTTP built-in server,
  and in case of no response then restart it. This is controlled by a new option
  called 'autocheck_responsiveness' which by default is enabled. This should fix
  these annoying hangups in the HTTP built-in server.
- Fixed a bad memory scaling in *BSD systems.
- Fixed in 'process.pm' to fully honour the option 'netstats_in_bps'.
- Fixed to force Monitorix to be started at the end of boot in systemd-based
  systems. This should fix a problem with 'traffacct.pm' and iptables.
- Fixed the missing declaration of 'allvalues' in 'gensens.pm' which prevented
  graphs generation if 'show_gaps' option was enabled.
- Fixed to correctly represent the values in text mode in 'ipmi.pm'.
- Fixed a missalignment of the MB & CPU temperatures values in 'lmsens.pm'.
- Fixed to limit the length of the device names in 'fs.pm'.
- Fixed a missing gap colouring in some zoomed graphs of 'system.pm'.
- Fixed to save missing values as 'unknown' in 'apcupsd.pm'. [#201]
- Fixed a XSS vulnerability in CGI variables. [#203]
	(thanks to Sebastian Gilon from http://testarmy.com/, who pointed this out)
- Fixed to check if setgid() and setuid() functions were successful before
  starting the HTTP built-in.
  	(thanks to Sander Bos for pointing this out)
- Fixed to disable 'echo' when typing the password in './htpasswd.pl'.
  	(thanks to Sander Bos for pointing this out)
- Fixed to set permissions 0600 to log files.