@@ -1152,13 +1152,15 @@ This list complements the \fBdesc\fP option. It basically allows you to change t
 .P
 .BI alerts
 .RS
-This optional list enables the alert capabilities for this graph and complements with the \fBdesc\fP option. Each alert has three fields separated by comma: the \fItime interval\fP, the \fIthreshold\fP and the path to the \fIscript\fP to be executed.
+This optional list enables the alert capabilities for this graph and complements with the \fBlist\fP option. Each alert has four fields separated by comma: the \fItime interval\fP, the \fIthreshold\fP, the path to the \fIscript\fP to be executed and \fIwhen\fP the alert must be triggered. the last field is optional.
 .P
 The \fItime interval\fP is the period of time (in seconds) that the \fIthreshold\fP needs to be exceeded before the external script is executed.
 .P
-The \fIthreshold\fP is the temperature that needs to be reached or exceeded within the specified time in \fItime interval\fP to execute the external script.
+The \fIthreshold\fP is the value (either temperature or HZ) that needs to be reached or exceeded within the specified time in \fItime interval\fP to execute the external script.
 .P
 The \fIscript\fP is the full path name of the script that will be executed by this alert.
+.P
+The \fIwhen\fP value specifies when the alert must be triggered (\fIabove\fP or \fIbelow\fP) the threshold, being \fIabove\fP the default value when it's not specified.
 .P
 Each defined sensor has its own alert.
 .P
@@ -1169,12 +1171,16 @@ The following is an example of an alert defined for the first temperature sensor
 .RS
 <alerts>
 .br
-	at1 = 3600, 40, /path/to/script.sh
+	temp0 = 3600, 40, /path/to/script.sh, above
+.br
+	temp1 = 3600, 10, /path/to/script.sh, below
 .br
 </alerts>
 .P
 .RE
-Such alert means that if the value of the sensor \fIat1\fP reaches or exceeds 40 during at least one hour (3600 seconds) the script in \fI/path/to/script.sh\fP will be executed.
+The first alert means that if the value of the sensor temp0 exceeds above 40 during at least one hour (3600 seconds) the script in \fI/path/to/script.sh\fP will be executed.
+.P
+The second alert means that if the value of the sensor temp1 exceeds below 10 during at least one hour (3600 seconds) the script in \fI/path/to/script.sh\fP will be executed.
 .P
 The external script will receive the following arguments:
 .P
@@ -1184,6 +1190,8 @@ The external script will receive the following arguments:
 2nd - the value defined as \fIthreshold\fP.
 .br
 3rd - the value of the sensor.
+.br
+4th - the direction or when that alert was triggered by (above or below).
 .P
 .RE
 .RE
